--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,13 @@ body, html {
     flex-grow: 11;
 }
 
+.chooseViewParagraph{
+    color: white;
+    margin: 1.5em ;
+    font-size: 1.2em;
+    
+}
+
 ::selection {
     background: #1db954;
 }
