--- a/src/components/Students/style.css
+++ b/src/components/Students/style.css
@@ -1,8 +1,13 @@
+.studentsContainer{
+    position: relative;
+}
+
 .studentsContainer p {
     font-size: 2.5em;
     color: white;
     font-weight: bold;
     margin: 0.6em 1em;
+   
 }
 
 .dataTable{
@@ -63,3 +68,9 @@
     color:rgb(240, 240, 240);
     padding: 8px 0;
 }
+
+.addButton {
+    margin-right: 50px;
+    background-color: white;
+}
+
