--- a/src/components/AppHeader/style.css
+++ b/src/components/AppHeader/style.css
@@ -1,4 +1,5 @@
 .header {
+    
     width: 100%;
     height: 13%;
     min-height: 80px;
@@ -6,6 +7,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    -webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.75);
 }
 
 .header p {
