--- a/src/components/Students/style.css
+++ b/src/components/Students/style.css
@@ -1,8 +1,8 @@
-.studentsContainer{
+.dataContainer{
     position: relative;
 }
 
-.studentsContainer p {
+.dataContainer p {
     font-size: 2.5em;
     color: white;
     font-weight: bold;
@@ -17,13 +17,19 @@
     table-layout: fixed;
     border-collapse: collapse;
 }
+thead{
+    width: 100%;
+}
+
+thead th {
+    width: 25%;
+}
 
 .dataTable th {
     text-transform: uppercase;
     color: rgb(182, 182, 182);
     font-size: 0.8em;
     font-weight: 200;
-    width: 24%;
     text-align: left;
     padding: 5px 0;
 }
