--- a/src/components/Students/style.css
+++ b/src/components/Students/style.css
@@ -80,3 +80,7 @@ thead th {
     background-color: white;
 }
 
+.dialog {
+    background-color: #212121 !important;
+    color: white !important;
+}
